<resources>
    <string name="app_name">Practica_9</string>
    <string name="thoppings">THOPPINGS</string>
    <string name="crema">Crema</string>
    <string name="chocolate">Chocolate</string>
    <string name="cantidad">CANTIDAD</string>
    <string name="_0">0</string>
    <string name="resta">-</string>
    <string name="suma">+</string>
    <string name="order">Order</string>
    <string name="nombre">Nombre</string>
</resources>
