<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="coffee.ejercicio.com.practica_9.MainActivity"
    android:id="@+id/relativeLayout">

    <EditText
        android:id="@+id/tName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="21dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:labelFor="@id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/thoppings"
        app:layout_constraintStart_toStartOf="@+id/tName"
        app:layout_constraintTop_toBottomOf="@+id/tName" />

    <CheckBox
        android:id="@+id/crema"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/crema"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <CheckBox
        android:id="@+id/choco"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/chocolate"
        app:layout_constraintStart_toStartOf="@+id/crema"
        app:layout_constraintTop_toBottomOf="@+id/crema" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/cantidad"
        app:layout_constraintStart_toStartOf="@+id/choco"
        app:layout_constraintTop_toBottomOf="@+id/choco" />

    <Button
        android:id="@+id/bdecrementa"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="decreCont"
        android:padding="0dp"
        android:text="@string/resta"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintLeft_toLeftOf="@+id/textView2" />

    <Button
        android:id="@+id/bincrementa"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="increCont"
        android:padding="0dp"
        android:text="@string/suma"
        android:textSize="20sp"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/choco" />

    <TextView
        android:id="@+id/contadorTexto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/_0"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="44dp"
        android:layout_marginTop="11dp"
        android:text="@string/order"
        app:layout_constraintTop_toBottomOf="@+id/bdecrementa"
        app:layout_constraintEnd_toEndOf="@+id/bincrementa" />


</android.support.constraint.ConstraintLayout>
